[gd_scene load_steps=11 format=3 uid="uid://dg5wks2g45tl6"]

[ext_resource type="Script" path="res://main.gd" id="1"]
[ext_resource type="Material" path="res://materials/face_material.material" id="2"]
[ext_resource type="Material" uid="uid://7ec7yphpjrws" path="res://materials/edge_material.material" id="3"]
[ext_resource type="Texture2D" uid="uid://drk5oo1ryk4a8" path="res://ui/logo-onshape-gray-green.svg" id="4"]
[ext_resource type="Environment" uid="uid://dnf42v2jng1m5" path="res://default_env.tres" id="4_7eb3i"]

[sub_resource type="ArrayMesh" id="5"]

[sub_resource type="ArrayMesh" id="6"]

[sub_resource type="SphereMesh" id="4"]
material = ExtResource("2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rxva2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amky7"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="Faces" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
material_override = ExtResource("2")
mesh = SubResource("5")

[node name="Edges" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
layers = 2
material_override = ExtResource("3")
mesh = SubResource("6")

[node name="Sphere" type="MeshInstance3D" parent="."]
visible = false
material_override = ExtResource("2")
mesh = SubResource("4")

[node name="CameraBase" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)
environment = ExtResource("4_7eb3i")
fov = 45.0
size = 4.0

[node name="Diffuse" type="DirectionalLight3D" parent="CameraBase"]
transform = Transform3D(0.65914, -0.549642, 0.513252, 0.114828, 0.748056, 0.653626, -0.743202, -0.371895, 0.556188, 0, 0, 0)
visible = false
light_energy = 0.35

[node name="Highlight" type="DirectionalLight3D" parent="CameraBase"]
transform = Transform3D(0.761232, -0.549642, 0.344122, 0.265102, 0.748056, 0.608386, -0.591817, -0.371896, 0.715155, 0, 0, 0)
visible = false
light_energy = 0.05

[node name="FaceHTTPRequest" type="HTTPRequest" parent="."]

[node name="EdgeHTTPRequest" type="HTTPRequest" parent="."]

[node name="DocumentsHTTPRequest" type="HTTPRequest" parent="."]

[node name="TopBar" type="ColorRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
color = Color(0.972549, 0.972549, 0.972549, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="URLLineEdit" type="LineEdit" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_rxva2")
text = "https://cad.onshape.com/documents/bd3e28cca10081e0a5ad3ef8/w/f254fe7c4889c85a6841547f/e/f73186e750b795fdac6fbae0"
placeholder_text = "Enter Part Studio URL"

[node name="MarginContainer4" type="MarginContainer" parent="TopBar/HBoxContainer"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_amky7")
text = "Load"

[node name="MarginContainer3" type="MarginContainer" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2

[node name="TestSlider" type="HSlider" parent="."]
visible = false
offset_left = 17.0
offset_top = 57.0
offset_right = 759.0
offset_bottom = 93.0
min_value = 0.995
max_value = 1.0
step = 0.0
value = 0.995

[node name="MenuButton" type="MenuButton" parent="."]
offset_top = 40.0
offset_right = 113.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "Render mode"
item_count = 6
popup/item_0/text = "Shaded"
popup/item_0/id = 0
popup/item_1/text = "Shaded without edges"
popup/item_1/id = 1
popup/item_2/text = "Shaded with hidden edges"
popup/item_2/id = 2
popup/item_3/text = "Hidden edges removed"
popup/item_3/id = 3
popup/item_4/text = "Hidden edges visible"
popup/item_4/id = 4
popup/item_5/text = "Translucent"
popup/item_5/id = 5

[connection signal="request_completed" from="FaceHTTPRequest" to="." method="_face_request_completed"]
[connection signal="request_completed" from="EdgeHTTPRequest" to="." method="_edge_request_completed"]
[connection signal="request_completed" from="DocumentsHTTPRequest" to="." method="_on_documents_http_request_request_completed"]
[connection signal="pressed" from="TopBar/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="value_changed" from="TestSlider" to="." method="_on_test_slider_value_changed"]
